# binformat

./: 312415412151251.beach  Cargo.toml  account-indexing.md  inner_ix_test124142.beach  ixtest1.beach  miro.md  readme.md  sample.beach  sample_encoded.beach  sample_encoded.sbbf
src/: main.rs  notes.md  tx.rs  utils.rs
src/sampledata/: block121654071.json  block121654072.json  block121654073.json
src/transaction/: balances.rs  instructions.rs  mod.rs
