[package]
name = "binformat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json  ="1.0.82"

bincode2 = "2.0"

solana-sdk = "1.11.7"
solana-geyser-plugin-interface = "1.11.7"
solana-transaction-status = "1.11.7"
