[package]
name = "binformat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json  ="1.0.82"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bincode2 = "2.0"
solana-sdk = "1.11.7"
solana-geyser-plugin-interface = "1.11.7"
solana-transaction-status = "1.11.7"
bytemuck = "1.12.1"
clap = { version="3.2.14" , features = ["derive"]}
bs58 = "0.4.0"
